// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal> renders 1`] = `
<body>
  <div>
    <dialog
      aria-details="test"
      class="test"
      open=""
    >
      <button
        aria-label="Close Dialog"
        class="close"
      >
        X
      </button>
    </dialog>
  </div>
</body>
`;

exports[`<Modal> renders 2`] = `
<body>
  <div>
    <dialog
      aria-details="test"
      class="test"
    >
      <button
        aria-label="Close Dialog"
        class="close"
      >
        X
      </button>
    </dialog>
  </div>
</body>
`;
